--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-mongo-sanitize": "^2.1.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.13.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12",
+    "path": "^0.12.7",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
   }
