upload images to cloudinary

--- a/server/config.env
+++ b/server/config.env
@@ -3,3 +3,7 @@ DB = mongodb://127.0.0.1:27017/messenger
 NODE_ENV=development
 JWT_SECRET_KEY = this_is_top_secret
 JWT_EXPIRE = 30d
+
+CLOUDINARY_NAME=hunnykhan
+CLOUDINARY_API_KEY=222514214362314
+CLOUDINARY_API_SECRET=hzi05G3jrGIBjW2WShw31VirkT0
